...
            crossAxisAlignment: CrossAxisAlignment.start,
            children: filterRows
          ),
        ),
        actions: <Widget>[
          TextButton(
            child: Text('Confirm'),
            onPressed: () {
              setState(() {
                _selectedFilters = newSelectedFilters;
                _filterCount = _selectedFilters.values.fold(0, (prev, elem) => prev + elem.length);
                _showSearchBar = _filterCount == 0;
              });
...

          return ListView(
            children: [
              if (games.isNotEmpty)
                Padding(
                  padding: EdgeInsets.all(8.0),
                  child: Text('Games', style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold)),
                ),
              ...games.map((game) => GameTile(game: game)).toList(),
            ],
          );
        } else {
          return Center(child: Text("No results found"));
        }
      },
    );
  }

  Widget _buildTabPage() {
...
